# Nmap Changelog ($Id$); -*-text-*-

o [NSE] Fixed a false positive in http-vuln-cve2011-3192.nse, which detected
  Apache 2.2.22 as vulnerable. [Michael Meyer]

o [NSE] Added changes to brute and unpwdb libraries to allow more flexible iterator
  specification and control. [Aleksandar Nikolic]

o [NSE] Added ms-sql-dac script which queries the Microsoft SQL Browser service
  for the DAC (Dedicated Admin Connection) port. [Patrik Karlsson]

o [NSE] Added irc-sasl-brute script which performs brute force password
  auditing against IRC (Internet Relay Chat) servers supporting SASL 
  authentication. [Piotr Olma]

o [NSE] Added sip-methods script which enumerates a SIP server's allowed
  methods. [Hani Benhabiles]

o [NSE] Added sip-call-spoof script which spoofs a call to a SIP phone and
  detects the action taken by the target. [Hani Benhabiles]

o [NSOCK] Modified multiple scripts that operated against HTTP based services
  so as to remove false positives that were generated when the target service 
  answers with a 200 response to all requests. [Tom Sellers]

o [NSE] Added metasploit-info script which uses Metasploit RPC service to get
  information about the remote system. [Aleksandar Nikolic]

o [NSE] Added tls-nextprotoneg script which enumerates a TLS server's supported
  protocols by using the next protocol negotiation extension.
  [Hani Benhabiles]

o [NSOCK] Fixed an epoll-engine-specific bug. The engine didn't recognized FDs
  that were internally closed and replaced by other ones. This happened during
  reconnect attempts. Also, the IOD flags were not properly cleared.
  [Henri Doreau, Daniel Miller]

o Added support for log type bitmasks in log_vwrite(). Also replaced a fatal()
  statement by an assert(0) to get rid of a possible infinite call loop when
  passed an invalid log type. [Henri Doreau]

o Added handling for the unexpected error WSAENETRESET (10052). This error is
  currently wrapped in the ifdef for WIN32 as there error appears to be unique